--- a/src/Styles/components/_header.scss
+++ b/src/Styles/components/_header.scss
@@ -1,7 +1,7 @@
 .Header {
   background: $off-black;
   color: white;
-  margin-bottom: $xl-size;
+  margin-bottom: $m-size;
   padding: $m-size 0; 
 
 }
@@ -19,4 +19,11 @@
   font-size: $m-size;
   font-weight: 500;
   margin: 0;
+}
+
+@media (min-width: $desktop-breakpoint){
+  .Header{
+    margin-bottom: $xl-size;
+  }
+
 }
