--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -4,5 +4,8 @@
 @import "./components/header";
 @import "./components/container";
 @import "./components/button";
-@import "./components/widget"; 
+@import "./components/widget";
+@import "./components/option"; 
+@import "./components/addoption"; 
+@import "./components/modal";
 
